# IZG2026OGL

./: CMakeLists.txt  main.cpp
